--- a/css/index.css
+++ b/css/index.css
@@ -132,11 +132,11 @@ table {
 html {
   font-size: 62.5%;
 }
+html,
 body {
-  font-family: "Lato", sans-serif;
-  font-size: 1.6rem;
+  font-family: Arial, Helvetica, sans-serif;
+  background: aqua;
 }
 h1 {
-  font-family: "Pacifico", cursive;
-  font-size: 3.2rem;
+  font-family: Pacifico, cursive;
 }
