--- a/css/index.css
+++ b/css/index.css
@@ -132,11 +132,53 @@ table {
 html {
   font-size: 62.5%;
 }
-html,
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background: aqua;
+  font-family: Lato, "sans-serif";
+  font-size: 1.8rem;
+  line-height: 1.5;
 }
 h1 {
   font-family: Pacifico, cursive;
+  font-size: 3.2rem;
+}
+h2 {
+  font-size: 4.8rem;
+}
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.content-panel {
+  margin: 0 auto 60px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.content-panel .text-content {
+  max-width: 500px;
+  width: 40%;
+}
+.content-panel .text-content h2 {
+  margin-bottom: 10px;
+}
+.content-panel .text-content p {
+  margin-bottom: 20px;
+}
+.content-panel img {
+  max-width: 500px;
+  width: 40%;
+}
+@media (max-width: 500px) {
+  .content-panel {
+    flex-direction: column;
+    margin-bottom: 40px;
+  }
+}
+.discover-content img {
+  order: -1;
+}
+@media (max-width: 500px) {
+  .discover-content img {
+    order: 0;
+  }
 }
