--- a/less/global.less
+++ b/less/global.less
@@ -6,11 +6,17 @@ html {
   font-size: 62.5%;
 }
 
-html, body {
-  font-family: Arial, Helvetica, sans-serif;
-  background: aqua;
+body {
+  font-family: Lato, "sans-serif";
+  font-size: 1.8rem;
+  line-height: 1.5;
 }
 
 h1 {
   font-family: Pacifico, cursive;
+  font-size: 3.2rem;
+}
+
+h2 {
+  font-size: 4.8rem;
 }
