--- a/css/index.css
+++ b/css/index.css
@@ -133,16 +133,16 @@ html {
   font-size: 62.5%;
 }
 body {
-  font-family: Lato, "sans-serif";
+  font-family: 'Lato', sans-serif;
   font-size: 1.8rem;
   line-height: 1.5;
 }
 h1 {
-  font-family: Pacifico, cursive;
-  font-size: 3.2rem;
+  font-family: 'Pacifico', cursive;
+  font-size: 6.5rem;
 }
 h2 {
-  font-size: 4.8rem;
+  font-size: 3.2rem;
 }
 .container {
   max-width: 1200px;
@@ -168,7 +168,7 @@ h2 {
   max-width: 500px;
   width: 40%;
 }
-@media (max-width: 500px) {
+@media (min-width: 500px) {
   .content-panel {
     flex-direction: column;
     margin-bottom: 40px;
@@ -177,7 +177,7 @@ h2 {
 .discover-content img {
   order: -1;
 }
-@media (max-width: 500px) {
+@media (min-width: 500px) {
   .discover-content img {
     order: 0;
   }
