--- a/less/global.less
+++ b/less/global.less
@@ -7,16 +7,16 @@ html {
 }
 
 body {
-  font-family: Lato, "sans-serif";
-  font-size: 1.8rem;
+  font-family: @font-content;
+  font-size: @font-size-normal;
   line-height: 1.5;
 }
 
 h1 {
-  font-family: Pacifico, cursive;
-  font-size: 3.2rem;
+  font-family: @font-logo;
+  font-size: @font-size-big;
 }
 
 h2 {
-  font-size: 4.8rem;
+  font-size: @font-size-medium;
 }
