--- a/less/home-page.less
+++ b/less/home-page.less
@@ -27,7 +27,7 @@
     width: 40%;
   }
 
-  @media (max-width: 500px) {
+  @media @mobile {
     flex-direction: column;
     margin-bottom: 40px;
   }
@@ -37,7 +37,7 @@
   img {
     order: -1;
 
-    @media (max-width: 500px) {
+    @media @mobile {
       order: 0;
     }
   }
