Added and styled mobile-responsive footer

--- a/less/variables.less
+++ b/less/variables.less
@@ -25,4 +25,5 @@
 @bg-button: @black;
 
 // Breakpoints
-@mobile: ~"(min-width: 500px)";
+@mobile: ~"(max-width: 500px)";
+@tablet: ~"(max-width: 800px";
