--- a/public/css/index.css
+++ b/public/css/index.css
@@ -144,6 +144,59 @@ h1 {
 h2 {
   font-size: 3.2rem;
 }
+footer {
+  background: #444444;
+  width: 100%;
+  padding: 80px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+footer img {
+  margin: 0 auto 40px;
+  max-width: 500px;
+  width: 100%;
+}
+footer nav {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin-bottom: 40px;
+}
+@media (max-width: 500px) {
+  footer nav {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+footer nav a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+footer nav a:hover {
+  text-decoration: underline;
+}
+@media (max-width: 500px) {
+  footer nav a {
+    margin-bottom: 20px;
+  }
+  footer nav a:last-of-type {
+    margin-bottom: 0;
+  }
+}
+footer button {
+  border: 1px solid #212529;
+  background-color: #212529;
+  color: #FFFFFF;
+  border-radius: 10px;
+  padding: 12px 10px;
+  text-align: center;
+  font-size: 1.8rem;
+}
+footer button:hover {
+  background-color: #FFFFFF;
+  color: #212529;
+}
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -168,7 +221,7 @@ h2 {
   max-width: 500px;
   width: 40%;
 }
-@media (min-width: 500px) {
+@media (max-width: 500px) {
   .content-panel {
     flex-direction: column;
     margin-bottom: 40px;
@@ -177,7 +230,7 @@ h2 {
 .discover-content img {
   order: -1;
 }
-@media (min-width: 500px) {
+@media (max-width: 500px) {
   .discover-content img {
     order: 0;
   }
