--- a/less/global.less
+++ b/less/global.less
@@ -1,11 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-
 body {
   font-family: @font-content;
   font-size: @font-size-normal;
@@ -13,10 +5,10 @@ body {
 }
 
 h1 {
-  font-family: @font-logo;
+  font-family: @font-content;
   font-size: @font-size-big;
 }
 
 h2 {
-  font-size: @font-size-medium;
+  font-size: @font-size-big;
 }
