--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,136 +1,11 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-* {
-  box-sizing: border-box;
-}
 html {
+  box-sizing: border-box;
   font-size: 62.5%;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 body {
   font-family: 'Lato', sans-serif;
@@ -138,11 +13,61 @@ body {
   line-height: 1.5;
 }
 h1 {
-  font-family: 'Pacifico', cursive;
+  font-family: 'Lato', sans-serif;
   font-size: 6.5rem;
 }
 h2 {
-  font-size: 3.2rem;
+  font-size: 6.5rem;
+}
+.header {
+  display: flex;
+  flex-direction: column;
+}
+.header .header-main {
+  display: flex;
+  flex-direction: row;
+}
+.header .header-description-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.header .header-image-img {
+  width: 100%;
+  height: auto;
+}
+.navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.navigation .navigation-logo {
+  padding: 30px 20px;
+}
+.navigation .navigation-links {
+  display: flex;
+  flex-direction: row;
+}
+.navigation .navigation-cta {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.navigation .navigation-cta-login {
+  margin-right: 30px;
+}
+.navigation .navigation-cta-signup {
+  border: 1px solid #212529;
+  background-color: #212529;
+  color: #FFFFFF;
+  border-radius: 10px;
+  padding: 12px 10px;
+  text-align: center;
+  font-size: 1.8rem;
+}
+.navigation .navigation-cta-signup:hover {
+  background-color: #FFFFFF;
+  color: #212529;
 }
 footer {
   background: #444444;
