header and navigation style

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,14 +4,16 @@
   justify-content: space-between;
 
   .navigation-logo {
-    padding: 30px 20px;
+    padding: 0px 20px;
   }
 
   .navigation-links {
     display: flex;
     flex-direction: row;
+    align-items: center;
 
     .navigation-link {
+      padding: 0 20px;
     }
   }
 
@@ -22,10 +24,10 @@
   }
 
   .navigation-cta-login {
-    margin-right: 30px;
+    padding: 0px 20px;
   }
 
   .navigation-cta-signup {
-    .btn-cta();
+    .btn-cta()
   }
 }
