--- a/public/css/index.css
+++ b/public/css/index.css
@@ -73,6 +73,25 @@ h2 {
   background-color: #FFFFFF;
   color: #212529;
 }
+.team .team-title {
+  text-align: center;
+}
+.team .team-cards {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+.team .team-cards .team-card {
+  width: 250px;
+  margin: 5px 20px;
+  text-align: center;
+}
+.team .team-cards .team-card .team-img {
+  border-radius: 50%;
+  width: 100%;
+  max-width: 140px;
+  height: auto;
+}
 footer {
   background: #444444;
   width: 100%;
