responsive menu, header styles, color images

--- a/less/footer.less
+++ b/less/footer.less
@@ -8,7 +8,7 @@ footer {
   align-items: center;
 
   //Still figuring out how to get background color to extend; for now...
-  border-radius: 25px;
+  // border-radius: 25px;
   
   img {
     margin: 0 auto 40px;
@@ -49,7 +49,7 @@ footer {
   }
 
   button {
-    .btn-cta();
+    .btn-cta-wide(@secondary);
 
     @media @mobile {
       font-size: 2rem;
