--- a/less/index.less
+++ b/less/index.less
@@ -1,9 +1,26 @@
+// Variables
 @import 'variables';
+
+// Mixins
 @import 'mixins';
+
+// Reset
 @import 'reset';
+
+// Global
 @import 'global';
+
+// Header
 @import 'header';
+
+// Navigation
 @import 'navigation';
+
+// Team Section
 @import 'team';
+
+// Footer
 @import 'footer';
+
+// Home Page / Content
 @import 'home-page';
