--- a/less/reset.less
+++ b/less/reset.less
@@ -1,7 +1,15 @@
-html {
-	box-sizing: border-box;
-	font-size: 62.5%;
+* {
+  margin: 0;
+  padding: 0;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
   box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
 }
