--- a/less/variables.less
+++ b/less/variables.less
@@ -4,11 +4,17 @@
 @font-logo: 'Pacifico', cursive;
 @font-content: 'Lato', sans-serif;
 
-// Colors
+// Colors - Black and White Testing
 @white: #FFFFFF;
 @dark-grey: #444444;
 @gray: #6F6F6F;
 @black: #212529;
+
+// Color Palette
+@primary: #2EC4B6;
+@secondary: #586BA4;
+@danger: #FF6B6B;
+@cream: #F7FFF7;
 
 // Font sizes
 @font-size-big: 6.5rem;
@@ -18,11 +24,11 @@
 // Content assignments
 @font-color-content: @black;
 @bg-main:  @white;
-@bg-footer: @dark-grey;
+@bg-footer: @primary;
 
 // CTA button assignments
 @font-color-button: @white;
-@bg-button: @black;
+@bg-button: @primary;
 
 // Breakpoints
 @mobile: ~"(max-width: 500px)";
