--- a/less/global.less
+++ b/less/global.less
@@ -1,14 +1,20 @@
 body {
   font-family: @font-content;
   font-size: @font-size-normal;
-  line-height: 1.5;
+  line-height: 1.25;
 }
 
 h1 {
-  font-family: @font-content;
   font-size: @font-size-big;
+  font-weight: 300;
 }
 
 h2 {
   font-size: @font-size-big;
+  font-weight: 300;
+}
+
+p {
+  font-weight: 300;
+  margin: 15px 0;
 }
