--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,55 +4,30 @@
 }
 
 .content-panel {
-  margin: 0 auto 60px;
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  margin: 60px 0;
 
-  .text-content {
-    max-width: 500px;
-    width: 40%;
-
-    h2 {
-      margin-bottom: 10px;
-
-      @media @mobile {
-        font-size: 3.6rem;
-      }
-    }
-
-    p {
-      margin-bottom: 20px;
-    }
-
+  .content-text {
+    width: 500px;
     @media @mobile {
-      width: 60%;
+      width: 100%;
     }
   }
 
-  img {
-    max-width: 500px;
-    width: 40%;
-
-    @media @mobile {
-      width: 60%;
-    }
+  .content-image-img {
+    width: 100%;
+    height: auto;
   }
-
   @media @mobile {
     flex-direction: column;
-    margin: 0 60px 40px;
-    width: 100%;
-    align-items: flex-start;
   }
 }
-
-.discover-content {
-  img {
-    order: -1;
-
-    @media @mobile {
-      order: 0;
-    }
+.reverse {
+  flex-direction: row-reverse;
+  @media @mobile {
+    flex-direction: column;
   }
 }
