--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,9 +1,25 @@
-.btn-cta() {
+.btn-cta-normal() {
   border: 1px solid @bg-button;
   background-color: @bg-button;
   color: @font-color-button;
   border-radius: 10px;
   padding: 12px 10px;
+  text-align: center;
+  font-size: @font-size-normal;
+  
+  &:hover {
+    background-color: @font-color-button;
+    color: @bg-button;
+  }
+}
+
+.btn-cta-wide(@bg-button) {
+  border: 1px solid @bg-button;
+  background-color: @bg-button;
+  color: @font-color-button;
+  border-radius: 10px;
+  padding: 12px 10px;
+  width: 150px;
   text-align: center;
   font-size: @font-size-normal;
   
