--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,10 +1,11 @@
 .navigation {
+  margin: 15px 0 25px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 
   .navigation-logo {
-    padding: 0px 20px;
+    padding: 0 20px 0 0;
   }
 
   .navigation-links {
@@ -13,7 +14,25 @@
     align-items: center;
 
     .navigation-link {
+      color: @font-color-content;
+      text-decoration: none;
       padding: 0 20px;
+      @media @mobile {
+        display: none;
+      }
+      @media @tablet {
+        display: none;
+      }
+    }
+  }
+
+  .navigation-hamburger-button {
+    display: none;
+    @media @mobile {
+      display: block;
+    }
+    @media @tablet {
+      display: block;
     }
   }
 
@@ -21,13 +40,31 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    @media @mobile {
+      display: none;
+    }
+    @media @tablet {
+      display: none;
+    }
+    a {
+      text-decoration: none;
+    }
   }
 
   .navigation-cta-login {
+    color: @font-color-content;
     padding: 0px 20px;
   }
 
   .navigation-cta-signup {
-    .btn-cta()
+    .btn-cta-normal();
   }
+}
+
+.navigation-links-mobile {
+  display: none;
+}
+
+.hidden-mobile-menu {
+  display: block;
 }
