--- a/less/team.less
+++ b/less/team.less
@@ -1,4 +1,5 @@
 .team {
+  margin: 60px 0;
 
   .team-title {
     text-align: center;
@@ -15,8 +16,12 @@
       text-align: center;
 
       .team-member-title {
+        margin: 0;
         //bold
         // import new font weight
+      }
+      .team-member-name {
+        margin: 0;
       }
 
       .team-img {
