--- a/less/variables.less
+++ b/less/variables.less
@@ -1,29 +1,30 @@
 // VARIABLES
 
 // Fonts
-@font-logo: 'Pacifico', cursive;
-@font-content: 'Lato', sans-serif;
+@font-logo: "Pacifico", cursive;
+@font-content: "Lato", sans-serif;
 
 // Colors - Black and White Testing
-@white: #FFFFFF;
+@white: #ffffff;
 @dark-grey: #444444;
-@gray: #6F6F6F;
+@gray: #6f6f6f;
 @black: #212529;
 
 // Color Palette
-@primary: #2EC4B6;
-@secondary: #586BA4;
-@danger: #FF6B6B;
-@cream: #F7FFF7;
+@primary: #2ec4b6;
+@secondary: #586ba4;
+@danger: #ff6b6b;
+@cream: #f7fff7;
 
 // Font sizes
 @font-size-big: 6.5rem;
+@font-size-big-tablet: 4.8rem;
 @font-size-medium: 3.2rem;
 @font-size-normal: 1.6rem;
 
 // Content assignments
 @font-color-content: @black;
-@bg-main:  @white;
+@bg-main: @white;
 @bg-footer: @primary;
 
 // CTA button assignments
@@ -32,4 +33,4 @@
 
 // Breakpoints
 @mobile: ~"(max-width: 500px)";
-@tablet: ~"(max-width: 800px)";
+@tablet: ~"(max-width: 768px)";
