--- a/less/header.less
+++ b/less/header.less
@@ -2,10 +2,21 @@
   display: flex;
   flex-direction: column;
 
+  @media @tablet {
+    .tablet-margin();
+  }
+  @media @mobile {
+    .mobile-margin();
+  }
+
   .header-main {
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    @media @tablet {
+      justify-content: space-between;
+    }
     @media @mobile {
       flex-direction: column-reverse;
     }
@@ -18,10 +29,32 @@
     .header-description-joinnow {
       .btn-cta-wide(@bg-button);
     }
+
+    @media @tablet {
+      h1 {
+        font-size: @font-size-big-tablet;
+        margin-bottom: 40px;
+      }
+      p {
+        display: none;
+      }
+    }
+    @media @mobile {
+      p {
+        display: block;
+      }
+    }
   }
 
   .header-image-img {
     width: 100%;
     height: auto;
+
+    @media @tablet {
+      margin-left: 12.5%;
+    }
+    @media @mobile {
+      margin: 0 auto;
+    }
   }
 }
