--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,7 +6,7 @@
   padding: 12px 10px;
   text-align: center;
   font-size: @font-size-normal;
-  
+
   &:hover {
     background-color: @font-color-button;
     color: @bg-button;
@@ -22,9 +22,17 @@
   width: 150px;
   text-align: center;
   font-size: @font-size-normal;
-  
+
   &:hover {
     background-color: @font-color-button;
     color: @bg-button;
   }
+}
+
+.tablet-margin() {
+  margin: 0 7.5%;
+}
+
+.mobile-margin() {
+  margin: 20px 12.5%;
 }
