--- a/public/css/index.css
+++ b/public/css/index.css
@@ -12,7 +12,7 @@ html {
   font-size: 62.5%;
 }
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 1.6rem;
   line-height: 1.25;
 }
@@ -32,10 +32,25 @@ p {
   display: flex;
   flex-direction: column;
 }
+@media (max-width: 768px) {
+  .header {
+    margin: 0 7.5%;
+  }
+}
+@media (max-width: 500px) {
+  .header {
+    margin: 20px 12.5%;
+  }
+}
 .header .header-main {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+@media (max-width: 768px) {
+  .header .header-main {
+    justify-content: space-between;
+  }
 }
 @media (max-width: 500px) {
   .header .header-main {
@@ -48,9 +63,9 @@ p {
   justify-content: center;
 }
 .header .header-description-container .header-description-joinnow {
-  border: 1px solid #2EC4B6;
-  background-color: #2EC4B6;
-  color: #FFFFFF;
+  border: 1px solid #2ec4b6;
+  background-color: #2ec4b6;
+  color: #ffffff;
   border-radius: 10px;
   padding: 12px 10px;
   width: 150px;
@@ -58,12 +73,36 @@ p {
   font-size: 1.6rem;
 }
 .header .header-description-container .header-description-joinnow:hover {
-  background-color: #FFFFFF;
-  color: #2EC4B6;
+  background-color: #ffffff;
+  color: #2ec4b6;
+}
+@media (max-width: 768px) {
+  .header .header-description-container h1 {
+    font-size: 4.8rem;
+    margin-bottom: 40px;
+  }
+  .header .header-description-container p {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .header .header-description-container p {
+    display: block;
+  }
 }
 .header .header-image-img {
   width: 100%;
   height: auto;
+}
+@media (max-width: 768px) {
+  .header .header-image-img {
+    margin-left: 12.5%;
+  }
+}
+@media (max-width: 500px) {
+  .header .header-image-img {
+    margin: 0 auto;
+  }
 }
 .navigation {
   margin: 15px 0 25px 0;
@@ -89,7 +128,7 @@ p {
     display: none;
   }
 }
-@media (max-width: 800px) {
+@media (max-width: 768px) {
   .navigation .navigation-links .navigation-link {
     display: none;
   }
@@ -102,7 +141,7 @@ p {
     display: block;
   }
 }
-@media (max-width: 800px) {
+@media (max-width: 768px) {
   .navigation .navigation-hamburger-button {
     display: block;
   }
@@ -117,7 +156,7 @@ p {
     display: none;
   }
 }
-@media (max-width: 800px) {
+@media (max-width: 768px) {
   .navigation .navigation-cta {
     display: none;
   }
@@ -130,17 +169,17 @@ p {
   padding: 0px 20px;
 }
 .navigation .navigation-cta-signup {
-  border: 1px solid #2EC4B6;
-  background-color: #2EC4B6;
-  color: #FFFFFF;
+  border: 1px solid #2ec4b6;
+  background-color: #2ec4b6;
+  color: #ffffff;
   border-radius: 10px;
   padding: 12px 10px;
   text-align: center;
   font-size: 1.6rem;
 }
 .navigation .navigation-cta-signup:hover {
-  background-color: #FFFFFF;
-  color: #2EC4B6;
+  background-color: #ffffff;
+  color: #2ec4b6;
 }
 .navigation-links-mobile {
   display: none;
@@ -150,6 +189,11 @@ p {
 }
 .team {
   margin: 60px 0;
+}
+@media (max-width: 500px) {
+  .team {
+    margin: 20px 12.5%;
+  }
 }
 .team .team-title {
   text-align: center;
@@ -177,12 +221,22 @@ p {
   height: auto;
 }
 footer {
-  background: #2EC4B6;
+  background: #2ec4b6;
   width: 100%;
   padding: 80px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media (max-width: 768px) {
+  footer {
+    padding: 80px 7.5%;
+  }
+}
+@media (max-width: 500px) {
+  footer {
+    padding: 80px 12.5%;
+  }
 }
 footer img {
   margin: 0 auto 40px;
@@ -192,7 +246,7 @@ footer img {
 footer nav {
   display: flex;
   justify-content: space-around;
-  width: 100%;
+  width: 60%;
   margin-bottom: 40px;
 }
 @media (max-width: 500px) {
@@ -202,7 +256,7 @@ footer nav {
   }
 }
 footer nav a {
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
 }
 footer nav a:hover {
@@ -218,9 +272,9 @@ footer nav a:hover {
   }
 }
 footer button {
-  border: 1px solid #586BA4;
-  background-color: #586BA4;
-  color: #FFFFFF;
+  border: 1px solid #586ba4;
+  background-color: #586ba4;
+  color: #ffffff;
   border-radius: 10px;
   padding: 12px 10px;
   width: 150px;
@@ -228,8 +282,8 @@ footer button {
   font-size: 1.6rem;
 }
 footer button:hover {
-  background-color: #FFFFFF;
-  color: #586BA4;
+  background-color: #ffffff;
+  color: #586ba4;
 }
 @media (max-width: 500px) {
   footer button {
@@ -248,8 +302,34 @@ footer button:hover {
   flex-direction: row;
   margin: 60px 0;
 }
+@media (max-width: 768px) {
+  .content-panel {
+    margin: 0 7.5%;
+  }
+  .content-panel .image-straight {
+    margin-left: 7.5%;
+  }
+  .content-panel .image-reverse {
+    margin-right: 7.5%;
+  }
+}
+@media (max-width: 500px) {
+  .content-panel {
+    margin: 20px 12.5%;
+    flex-direction: column;
+  }
+  .content-panel .image-straight,
+  .content-panel .image-reverse {
+    margin: 0 auto;
+  }
+}
 .content-panel .content-text {
   width: 500px;
+}
+@media (max-width: 768px) {
+  .content-panel .content-text {
+    width: 100%;
+  }
 }
 @media (max-width: 500px) {
   .content-panel .content-text {
@@ -259,11 +339,6 @@ footer button:hover {
 .content-panel .content-image-img {
   width: 100%;
   height: auto;
-}
-@media (max-width: 500px) {
-  .content-panel {
-    flex-direction: column;
-  }
 }
 .reverse {
   flex-direction: row-reverse;
