mobile menu css navigation

--- a/less/header.less
+++ b/less/header.less
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
 
-  @media @tablet {
-    .tablet-margin();
-  }
-  @media @mobile {
-    .mobile-margin();
-  }
+  // @media @tablet {
+  //   .tablet-margin();
+  // }
+  // @media @mobile {
+  //   .mobile-margin();
+  // }
 
   .header-main {
     display: flex;
