--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,12 @@
 .container {
   max-width: 960px;
   margin: 0 auto;
+  @media @tablet {
+    .tablet-margin();
+  }
+  @media @mobile {
+    .mobile-margin();
+  }
 }
 
 .content-panel {
@@ -11,8 +17,6 @@
   margin: 60px 0;
 
   @media @tablet {
-    .tablet-margin();
-
     .image-straight {
       margin-left: 7.5%;
     }
@@ -21,7 +25,6 @@
     }
   }
   @media @mobile {
-    .mobile-margin();
     flex-direction: column;
     .image-straight,
     .image-reverse {
