--- a/less/footer.less
+++ b/less/footer.less
@@ -31,6 +31,10 @@ footer {
 
     margin-bottom: 40px;
 
+    @media @tablet {
+      width: 100%;
+    }
+
     @media @mobile {
       flex-direction: column;
       align-items: center;
