--- a/public/css/index.css
+++ b/public/css/index.css
@@ -276,6 +276,11 @@ footer nav {
   width: 60%;
   margin-bottom: 40px;
 }
+@media (max-width: 768px) {
+  footer nav {
+    width: 100%;
+  }
+}
 @media (max-width: 500px) {
   footer nav {
     flex-direction: column;
