Added hover styles and links to nav links/buttons

--- a/less/header.less
+++ b/less/header.less
@@ -28,6 +28,7 @@
     justify-content: center;
     .header-description-joinnow {
       .btn-cta-wide(@bg-button);
+      cursor: pointer;
     }
 
     @media @tablet {
