--- a/less/footer.less
+++ b/less/footer.less
@@ -46,6 +46,7 @@ footer {
 
       &:hover {
         text-decoration: underline;
+        color: @secondary;
       }
 
       @media @mobile {
@@ -61,6 +62,7 @@ footer {
 
   button {
     .btn-cta-wide(@secondary);
+    cursor: pointer;
 
     @media @mobile {
       font-size: 2rem;
