--- a/less/header.less
+++ b/less/header.less
@@ -2,19 +2,18 @@
   display: flex;
   flex-direction: column;
 
-  // @media @tablet {
-  //   .tablet-margin();
-  // }
-  // @media @mobile {
-  //   .mobile-margin();
-  // }
+  h1 {
+    line-height: 1.1;
+  }
 
   .header-main {
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding: 60px 0 100px 0;
 
     @media @tablet {
+      padding: 20px 0 40px 0;
       justify-content: space-between;
     }
     @media @mobile {
@@ -26,23 +25,40 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    .header-description-joinnow {
-      .btn-cta-wide(@bg-button);
-      cursor: pointer;
+
+    .header-description {
+      @media @mobile {
+        display: flex;
+        flex-direction: column;
+        // align-items: center;
+      }
     }
 
-    @media @tablet {
-      h1 {
-        font-size: @font-size-big-tablet;
-        margin-bottom: 40px;
-      }
-      p {
-        display: none;
+    .header-description-button-container {
+      @media @mobile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
       }
     }
-    @media @mobile {
-      p {
+    .header-description-joinnow-anchor {
+      margin: 20px auto;
+    }
+    .header-description-joinnow {
+      .btn-cta-wide(@bg-button);
+    }
+    .header-description-login-anchor {
+      display: none;
+      text-decoration: none;
+      @media @mobile {
         display: block;
+      }
+    }
+    .header-description-login {
+      display: none;
+      @media @mobile {
+        display: block;
+        .btn-cta-wide(@bg-button);
       }
     }
   }
@@ -50,12 +66,10 @@
   .header-image-img {
     width: 100%;
     height: auto;
+    padding-left: 12.5%;
 
-    @media @tablet {
-      margin-left: 12.5%;
-    }
     @media @mobile {
-      margin: 0 auto;
+      padding: 0;
     }
   }
 }
