--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,10 +2,12 @@
   border: 1px solid @bg-button;
   background-color: @bg-button;
   color: @font-color-button;
-  border-radius: 10px;
-  padding: 12px 10px;
+  border-radius: 20px;
+  padding: 12px 20px;
+  width: 100px;
   text-align: center;
   font-size: @font-size-normal;
+  cursor: pointer;
 
   &:hover {
     background-color: @font-color-button;
@@ -17,11 +19,12 @@
   border: 1px solid @bg-button;
   background-color: @bg-button;
   color: @font-color-button;
-  border-radius: 10px;
+  border-radius: 20px;
   padding: 12px 10px;
-  width: 150px;
+  width: 180px;
   text-align: center;
   font-size: @font-size-normal;
+  cursor: pointer;
 
   &:hover {
     background-color: @font-color-button;
@@ -29,10 +32,14 @@
   }
 }
 
+.desktop-margin() {
+  margin: 0 4%;
+}
+
 .tablet-margin() {
-  margin: 0 7.5%;
+  margin: 0 4%;
 }
 
 .mobile-margin() {
-  margin: 20px 12.5%;
+  margin: 0 4%;
 }
