--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,8 +13,8 @@ html {
 }
 body {
   font-family: "Lato", sans-serif;
-  font-size: 1.6rem;
-  line-height: 1.25;
+  font-size: 1.8rem;
+  line-height: 1.5;
 }
 h1 {
   font-size: 6.5rem;
@@ -46,10 +46,21 @@ p {
     padding: 20px 0 40px 0;
     justify-content: space-between;
   }
+  .header .header-main h1 {
+    font-size: 4.8rem;
+    margin-bottom: 40px;
+  }
+  .header .header-main p {
+    display: none;
+  }
 }
 @media (max-width: 500px) {
   .header .header-main {
     flex-direction: column-reverse;
+  }
+  .header .header-main h1 {
+    font-size: 6.5rem;
+    margin-bottom: 20px;
   }
 }
 .header .header-description-container {
@@ -57,11 +68,18 @@ p {
   flex-direction: column;
   justify-content: center;
 }
+.header .header-description-container .header-description {
+  display: flex;
+  flex-direction: column;
+}
 @media (max-width: 500px) {
   .header .header-description-container .header-description {
     display: flex;
     flex-direction: column;
   }
+}
+.header .header-description-container .header-description-button-container {
+  align-self: center;
 }
 @media (max-width: 500px) {
   .header .header-description-container .header-description-button-container {
@@ -81,7 +99,7 @@ p {
   padding: 12px 10px;
   width: 180px;
   text-align: center;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   cursor: pointer;
 }
 .header .header-description-container .header-description-joinnow:hover {
@@ -110,7 +128,7 @@ p {
     padding: 12px 10px;
     width: 180px;
     text-align: center;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     cursor: pointer;
   }
   .header .header-description-container .header-description-login:hover {
@@ -214,7 +232,7 @@ p {
   padding: 12px 20px;
   width: 100px;
   text-align: center;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   cursor: pointer;
 }
 .navigation .navigation-cta .navigation-cta-signup:hover {
@@ -391,7 +409,7 @@ footer button {
   padding: 12px 10px;
   width: 180px;
   text-align: center;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   cursor: pointer;
 }
 footer button:hover {
